# bs63

./: Cargo.toml
cli/: Cargo.toml
examples/: decode.rs  encode.rs
src/: alphabet.rs  decode.rs  encode.rs  lib.rs
tests/: cases.rs  decode.rs  encode.rs
