[package]
name = "bs63"
version = "0.4.4"
authors = ["Wim Looman <wim@nemo157.com>"]
description = "A Base63 codec implementation."
repository = "https://github.com/zubcoin/bs63"
readme = "README.md"
keywords = ["base63"]
license = "MIT/Apache-2.0"
edition = "2018"

[workspace]
members = ["cli"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
check = ["sha2"]

[dependencies]
sha2 = { version = "0.9.0", optional = true, default-features = false }

[dev_dependencies]
criterion = "0.3"
base58 = "0.1.0"
rust-base58 = "0.0.4"
assert_matches = "1.3.0"

[[bench]]
name = "encode"
path = "benches/encode.rs"
harness = false

[[bench]]
name = "decode"
path = "benches/decode.rs"
harness = false
